# lserver

./: .gitignore  CMakeLists.txt  main.cpp
3rd/evpp/: CMakeLists.txt  event_loop.cc  event_loop.h
3rd/evpp/future/: Future.h  Helper.h  Scheduler.h  Try.h
3rd/evpp/util/: BlockingQueue.h  ThreadPool.cc  ThreadPool.h
3rd/lib/linux/include/event2/: event-config.h
3rd/lib/linux/include/openssl/: opensslconf.h
3rd/lib/windows/include/event2/: event-config.h
3rd/lib/windows/include/hiredis/adapters/: libevent.h
example/: Protobuf.cpp  Redis.cpp
game_server/: main.cc
game_server/idl/csv/: error.csv
game_server/idl/pb3/: auto_c2s.proto  auto_s2c.proto  client.proto  common.proto  inner.proto  redis_notify.proto  rpc.proto
util/redis/: RedisClient.cpp  RedisClient.h  RedisReply.cpp  RedisReply.h
